Upgrade UI for User and Admin Pages